# pmbootstrap

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  MANIFEST.in  README.md  pmbootstrap.py  pyproject.toml
.ci/: codespell.sh  mypy.sh  note.sh  pytest.sh  ruff.sh  shellcheck.sh  vermin.sh
helpers/: envkernel.fish  envkernel.sh  envsetup.sh
pmb/: __init__.py
pmb/aportgen/: __init__.py  busybox_static.py  core.py  device.py  gcc.py  grub_efi.py  linux.py  musl.py
pmb/chroot/: __init__.py  apk.py  apk_static.py  binfmt.py  init.py  initfs.py  initfs_hooks.py  mount.py  other.py  root.py  shutdown.py  user.py  zap.py
pmb/ci/: __init__.py
pmb/config/: __init__.py  init.py  load.py  merge_with_args.py  (+4 more)
test/: pytest.ini  test_apk.py  test_apk_static.py  test_aportgen.py  test_aportgen_device_wizard.py  test_arguments.py  test_bootimg.py  test_build_is_necessary.py  test_build_package.py  test_chroot_interactive_shell.py  test_chroot_mount.py  test_config_init.py  test_config_pmaports.py  test_config_user.py  test_config_workdir.py  test_envkernel.py  test_file.py  test_folder_size.py  test_frontend.py  test_helpers_git.py  test_helpers_lint.py  test_helpers_package.py  test_helpers_pmaports.py  test_helpers_repo.py  test_helpers_repo_missing.py  test_helpers_status.py  test_helpers_ui.py  test_install.py  test_mount.py  test_newapkbuild.py  test_parse_apkbuild.py  test_parse_apkindex.py  test_parse_depends.py  test_parse_deviceinfo.py  test_parse_kconfig.py  test_pkgrel_bump.py  test_proxy.py  test_qemu_running_processes.py  test_questions.py  test_run_core.py  (+4 more)
(+108 files in other folders)
